# Android-as_video_player

./: README.md
app/: CMakeLists.txt  build.gradle
app/src/androidTest/java/media/ushow/as_video_player/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt
app/src/main/cpp/common/: CommonTools.h  thread.h
app/src/main/cpp/common/egl_core/: egl_core.cpp
app/src/main/cpp/common/libresampler/: Resampler.cpp
app/src/main/cpp/common/message_queue/: handler.h
app/src/main/cpp/common/opensl_media/: opensl_es_context.h
app/src/main/cpp/video_player/: audio_output.cpp  audio_output.h  video_output.cpp  video_output.h  video_player_controller.cpp  video_player_controller.h
app/src/main/cpp/video_player/common/: circle_texture_queue.cpp  circle_texture_queue.h
app/src/main/cpp/video_player/decoder/: decoder_request_header.cpp  decoder_request_header.h  ffmpeg_video_decoder.cpp  ffmpeg_video_decoder.h  mediacodec_video_decoder.cpp  mediacodec_video_decoder.h  video_decoder.cpp  video_decoder.h
app/src/main/cpp/video_player/sync/: av_synchronizer.cpp  av_synchronizer.h
app/src/main/cpp/video_player/texture_uploader/: gpu_texture_frame_uploader.cpp  gpu_texture_frame_uploader.h  texture_frame_uploader.cpp  texture_frame_uploader.h  yuv_texture_frame_uploader.cpp  yuv_texture_frame_uploader.h
app/src/main/java/com/changba/songstudio/video/decoder/: MediaCodecDecoder.java  MediaCodecDecoderLifeCycle.java
app/src/main/java/com/changba/songstudio/video/player/: ChangbaPlayer.java  OnInitializedCallback.java  OnStoppedCallback.java
app/src/main/java/media/ushow/as_video_player/: ChangbaPlayerActivity.java  MainActivity.java
app/src/main/jni/: ChangbaPlayer.cpp  com_changba_songstudio_video_player_ChangbaPlayer.h  native-lib.cpp
app/src/main/res/drawable/: music_player_seekbar.xml
app/src/main/res/layout/: activity_main.xml  activity_surfaceview_player.xml
app/src/main/res/values/: strings.xml
app/src/test/java/media/ushow/as_video_player/: ExampleUnitTest.java
gradle/wrapper/: gradle-wrapper.properties
